# tg_restaurant

./: .gitignore  Makefile  README.md  bot.py  pyproject.toml  requirements.txt
app/: asgi.py  settings.py  urls.py  wsgi.py
bot_restaurant/: api.py  handlers.py
data/: products.json
restaurant/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
restaurant/management/commands/: create_admin_user.py  create_menu.py  create_products.py  first_setup.py
restaurant/migrations/: 0001_initial.py
